scheduler-> MultiPortFilter to differntiate health and main requests
refactor: Basic and Port Filters

fix java formatting issues